[tool.poetry]
name = "skin-cancer-detection"
version = "0.1.0"
description = "A streamlit app for skin cancer detection"
authors = ["Siddhesh Agarwal <siddhesh.agarwal@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false
homepage = "https://github.com/Siddhesh-Agarwal/skin-cancer-detection"

[tool.poetry.dependencies]
python = "^3.10"
tensorflow = "2.13.0"
keras = "2.13.1"
tensorboard = "2.13.0"
# Add other dependencies here
streamlit = "^1.38.0"  # Latest compatible version
tensorflow-io-gcs-filesystem = "0.27.0"  # Keep this version as it is
streamlit-lottie = "^0.0.5"
geopy = "^2.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
